# DoubleCompilersProblem

MyProgramGcc/: CMakeLists.txt  main.cpp  mylibrary.h  mylibrary.lib
VisualCppStaticLibrary/: CMakeLists.txt  mylibrary.c
